[package]
description = "Recursive-length prefix encoding, decoding, and compression"
repository = "https://github.com/CodeChain-io/rlp"
license = "MIT/Apache-2.0"
name = "rlp"
version = "0.4.0"
authors = ["CodeChain Team <hi@codechain.io>", "Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
rustc-hex = "1.0"

[dev-dependencies]
hex-literal = "0.2.1"
